@@ -1,3 +1,7 @@
+2004-05-25  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b145
+
+	* Change: rss.php config options mostly migrated to config wizard.
+
 2004-05-25  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b144
 
 	* Change:  Add "php_value session.save_handler files" to 
